tests/parser/tests/cases/should_fail/spread_pattern_in_namespace_pattern/case.stderr
error: failed to parse
 --> $DIR/case.hash:2:7
1 |   // Spread patterns are disallowed within namespaces
2 |   { x,  ...d} := foo();
  |         ^ here
  = note: unexpectedly reached the end of input, however received a `.`.
